--- a/lift.maintenance.android/res/layout/main.xml
+++ b/lift.maintenance.android/res/layout/main.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bglift3"
+    android:background="@drawable/bglift"
     android:orientation="vertical" >
 
     <TextView
