--- a/lift.maintenance.android/res/layout/itemcheckline.xml
+++ b/lift.maintenance.android/res/layout/itemcheckline.xml
@@ -9,14 +9,14 @@
 
         <TextView
             android:id="@+id/tvCheckLineName"
-            style="@style/lineLabel"
+            style="@style/interValue"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"/>
 
         <TextView
             android:id="@+id/tvCheckLineFrequency"
-            style="@style/lineLabel"
+            style="@style/interValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
