--- a/lift.maintenance.android/res/layout/itemchecklist.xml
+++ b/lift.maintenance.android/res/layout/itemchecklist.xml
@@ -8,5 +8,5 @@
     	<TextView android:id="@+id/tvCheckListName"
     	    android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
-			style="@style/listLabel" />
+			style="@style/interValue" />
     </LinearLayout>
