--- a/lift.maintenance.android/res/layout/itemintervention.xml
+++ b/lift.maintenance.android/res/layout/itemintervention.xml
@@ -9,8 +9,7 @@
             android:id="@+id/tvDescription"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-             
-            style="@style/interLabel"
+            style="@style/interValue"
             android:ellipsize="marquee"
             android:singleLine="true" />
 
@@ -18,7 +17,7 @@
             android:id="@+id/tvAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/interLabel"
+            style="@style/interValue"
             android:gravity="right"
              />
 
@@ -32,8 +31,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                
-            	style="@style/interLabel" />
+            	style="@style/interValue" />
 
             <TextView
                 android:id="@+id/tvState"
@@ -42,8 +40,7 @@
                 android:layout_gravity="right"
                 android:layout_weight="1"
                 android:gravity="right"
-                
-            	style="@style/interLabel"/>
+            	style="@style/interValue"/>
 
         </LinearLayout>
 
