--- a/lift.maintenance.android/res/values/styles.xml
+++ b/lift.maintenance.android/res/values/styles.xml
@@ -16,7 +16,7 @@
 	</style>
 	
     <style  name="LabelTitle">
-        <item name="android:textColor">#000000</item>
+        <item name="android:textColor">#DCDCDC</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:textSize">20dp</item>
         <item name="android:layout_margin">10dp</item>    
@@ -30,10 +30,10 @@
     </style>
     
     <style name="interLabel">
-        <item name="android:textColor">#eeeeee</item>
+        <item name="android:textColor">#DCDCDC</item>
         <item name="android:textSize">12dp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:background">#80990000</item>
+        <item name="android:background">#bb333333</item>
     </style>
     
     <style name="allRightsLabel">
