--- a/lift.maintenance.android/res/layout/intertabincident.xml
+++ b/lift.maintenance.android/res/layout/intertabincident.xml
@@ -8,7 +8,7 @@
 
         <TextView
             android:id="@+id/tvLastFailures"
-            style="@style/interLabel"
+            style="@style/interValue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView" />
@@ -20,7 +20,7 @@
 
             <TextView
                 android:id="@+id/tvContact"
-                style="@style/interLabel"
+                style="@style/interValue"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
