--- a/lift.maintenance.android/res/layout/intertabincident.xml
+++ b/lift.maintenance.android/res/layout/intertabincident.xml
@@ -5,53 +5,66 @@
         android:layout_height="fill_parent"
         android:background="@drawable/bglift"
         android:orientation="vertical" >
+        
+       	<ScrollView
+		    android:id="@+id/scrollView1"
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content" >
 
-        <TextView
-            android:id="@+id/tvLastFailures"
-            style="@style/interValue"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
-
-        <LinearLayout
-            android:id="@+id/linearLayout2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-
-            <TextView
-                android:id="@+id/tvContact"
-                style="@style/interValue"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:text="TextView" />
-
-            <ImageButton
-                android:id="@+id/bCall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@android:drawable/sym_action_call" />
-        </LinearLayout>
-
-        <Spinner
-            android:id="@+id/spChapter"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:prompt="@string/SelectChapter" />
-
-        <Spinner
-            android:id="@+id/spLocalization"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:prompt="@string/SelectLocalization" />
-
-        <Spinner
-            android:id="@+id/spCause"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:prompt="@string/SelectCause" />
-
+		    <LinearLayout
+		        android:id="@+id/linearLayout1"
+		        android:layout_width="match_parent"
+		        android:layout_height="match_parent"
+		        android:orientation="vertical" >
+		
+		        <TextView
+		            android:id="@+id/tvLastFailures"
+		            style="@style/interValue"
+		            android:layout_width="match_parent"
+		            android:layout_height="wrap_content"
+		            android:text="TextView" />
+		
+		        <LinearLayout
+		            android:id="@+id/linearLayout2"
+		            android:layout_width="match_parent"
+		            android:layout_height="wrap_content" >
+		
+		            <TextView
+		                android:id="@+id/tvContact"
+		                style="@style/interValue"
+		                android:layout_width="match_parent"
+		                android:layout_height="wrap_content"
+		                android:layout_gravity="center_vertical"
+		                android:layout_weight="1"
+		                android:text="TextView" />
+		
+		            <ImageButton
+		                android:id="@+id/bCall"
+		                android:layout_width="wrap_content"
+		                android:layout_height="wrap_content"
+		                android:src="@android:drawable/sym_action_call" />
+		        </LinearLayout>
+		
+		        <Spinner
+		            android:id="@+id/spChapter"
+		            android:layout_width="match_parent"
+		            android:layout_height="wrap_content"
+		            android:prompt="@string/SelectChapter" />
+		
+		        <Spinner
+		            android:id="@+id/spLocalization"
+		            android:layout_width="match_parent"
+		            android:layout_height="wrap_content"
+		            android:prompt="@string/SelectLocalization" />
+		
+		        <Spinner
+		            android:id="@+id/spCause"
+		            android:layout_width="match_parent"
+		            android:layout_height="wrap_content"
+		            android:prompt="@string/SelectCause" />
+			</LinearLayout>
+		</ScrollView>
+		
         <LinearLayout
             android:id="@+id/linearLayout3"
             android:layout_width="match_parent"
