--- a/lift.maintenance.android/res/layout/intertabsign.xml
+++ b/lift.maintenance.android/res/layout/intertabsign.xml
@@ -6,26 +6,38 @@
         android:background="@drawable/bglift"
         android:orientation="vertical"
         android:padding="5dp" >
-
-        <EditText
-            android:id="@+id/etSignName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-
-            <requestFocus />
-        </EditText>
         
-		<com.android.drawing.ImageDrawer
-		    android:id="@+id/iVSign"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:layout_marginBottom="5dp"
-		    android:scaleType="matrix" />
-
-		<Button
-		    android:id="@+id/bValSig"
+        <ScrollView
+		    android:id="@+id/scrollView1"
 		    android:layout_width="match_parent"
-		    android:layout_height="wrap_content"
-		    android:text="@string/bValSig" />
+		    android:layout_height="wrap_content" >
+
+		    <LinearLayout
+		        android:id="@+id/linearLayout1"
+		        android:layout_width="match_parent"
+		        android:layout_height="match_parent"
+		        android:orientation="vertical" >
 		
+		        <EditText
+		            android:id="@+id/etSignName"
+		            android:layout_width="match_parent"
+		            android:layout_height="wrap_content" >
+		
+		            <requestFocus />
+		        </EditText>
+		        
+				<com.android.drawing.ImageDrawer
+				    android:id="@+id/iVSign"
+				    android:layout_width="wrap_content"
+				    android:layout_height="wrap_content"
+				    android:layout_marginBottom="5dp"
+				    android:scaleType="matrix" />
+		
+				<Button
+				    android:id="@+id/bValSig"
+				    android:layout_width="match_parent"
+				    android:layout_height="wrap_content"
+				    android:text="@string/bValSig" />
+			</LinearLayout>
+		</ScrollView>
     </LinearLayout>
